<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_activity">Mon activité</string>
    <string name="test">5</string>
    <string name="events">Évènements</string>
    <string name="contributions">Contributions</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="birthday">Date d’anniversaire</string>
    <string name="phone">Téléphone</string>
    <string name="email">E-mail</string>
    <string name="profile">Profil</string>
    <string name="modify">Editer</string>
    <string name="city">Ville</string>
    <string name="city_action_zone">Ville et zone d’action *</string>
    <string name="within">Dans un rayon de *</string>
    <string name="settings">Paramètres</string>
    <string name="my_profile">Mon profil</string>
    <string name="min_progressbar">1 km</string>
    <string name="max_progressbar">100 km</string>
    <string name="indications">* Votre zone d’action permet de définir à quelle distance vous pouvez agir et vous déplacer  </string>
    <string name="notifications">Notifications</string>
    <string name="help_about">Aide et à propos</string>
    <string name="unblock">Débloquer des membres</string>
    <string name="sign_out">Se déconnecter</string>
    <string name="delete_account">Supprimer mon compte</string>
    <string name="share_app">Bonjour ! Grâce au réseau Entourage, je participe à des actions solidaires entre voisins avec et sans domicile. Rejoins-moi : https://bit.ly/applientourage</string>
    <string name="edit_profile">Modifier mes informations</string>
    <string name="description">Description  (200 caractères max)</string>
    <string name="interests">Mes centres d’intêrets</string>


    <string name="ethics">Charte éthique</string>
    <string name="ambassador_program">Postuler au programme ambassadeur</string>
    <string name="donation">Faire un don</string>
    <string name="faq">FAQ</string>
    <string name="share">Partager l’application</string>
    <string name="feedback">Noter l’app sur les stores</string>
    <string name="cgu">Conditions générales d’utilisation</string>
    <string name="confidentiality">Politique de Confidentialité</string>
    <string name="licence">Licence open-source</string>
    <string name="cancel">Annuler</string>
    <string name="delete">Supprimer</string>
    <string name="signing_out">Déconnexion</string>

    <string name="delete_account_dialog_title">Suppression du compte</string>
    <string name="delete_account_dialog_content">Souhaitez-vous supprimer votre compte ?</string>

    <string name="sign_out_dialog_title">Déconnexion</string>
    <string name="sign_out_dialog_content">Voulez-vous vous déconnecter ?</string>
    <string name="progress_km">%s km</string>
    <string name="modify_image"><u>Modifier ma photo</u></string>
    <string name="modify_interests_subtitle">Séléctionnez une ou plusieurs catégories qui vous intéresse.</string>
    <string name="add_image">Ajouter une photo</string>
    <string name="add_image_subtitle">Avec une photo c’est tout de suite plus sympa.
        Montrez-nous votre plus beau sourire.</string>
    <string name="edit_action_zone">Où souhaitez-vous agir ?</string>
    <string name="edit_action_zone_subtitle">Entourage est un réseau local!
        Découvrez les initiatives solidaires de votre quartier et tissez des liens avec vos voisins.</string>
    <string name="add_location">Ajouter un lieu *</string>
    <string name="city_or_department">Ville ou département</string>
    <string name="dont_communicate">* Entourage ne communique pas cette adresse.</string>
    <string name="validate">Valider</string>
    <string name="take_picture">Prendre une photo</string>
    <string name="import_picture">Importer depuis la galerie</string>
    <string name="description_counter">%s /200</string>
    <string name="apply_modifications">Appliquer les modifications</string>
    <string name="edit_interests">Modifier mes centres d’interêts</string>




</resources>