<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="25dp"
            android:paddingVertical="20dp"
            tools:context=".profile.MyProfileFragment">

            <TextView
                android:id="@+id/name"
                style="@style/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="John Doe" />


            <LinearLayout
                android:id="@+id/pins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name">

                <TextView
                    android:id="@+id/ambassador"
                    style="@style/profile_pins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rounded_background_pins"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/association"
                    app:layout_constraintTop_toBottomOf="@id/name"
                    tools:text="Ambassadeur" />

                <LinearLayout
                    android:id="@+id/association"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        style="@style/profile_pins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_background_pins"
                        android:paddingVertical="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="23dp"
                        tools:text="Entourage" />

                    <LinearLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="-20dp"
                        android:background="@drawable/circle"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/circle"
                            android:src="@drawable/edit_profile" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/description"
                style="@style/profile_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pins"
                tools:text="Bonjour je m'appelle Salim" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/interests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description"
                tools:itemCount="5"
                tools:listitem="@layout/profile_interest_item" />


            <TextView
                android:id="@+id/my_activity"
                style="@style/profile_titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="18dp"
                android:text="@string/my_activity"
                app:layout_constraintBottom_toTopOf="@id/events"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/interests" />

            <include
                android:id="@+id/events"
                layout="@layout/profile_statistics_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:icon="@{@drawable/contribution}"
                app:label="@{@string/contributions}"
                app:layout_constraintLeft_toRightOf="@id/contribution"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/my_activity"
                app:statistic="@{@string/test}" />

            <include
                android:id="@+id/contribution"
                layout="@layout/profile_statistics_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:icon="@{@drawable/event}"
                app:label="@{@string/events}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/events"
                app:layout_constraintTop_toBottomOf="@id/my_activity"
                app:statistic="@{@string/test}" />

            <TextView
                android:id="@+id/my_information"
                style="@style/profile_titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="18dp"
                android:text="@string/my_activity"
                app:layout_constraintBottom_toTopOf="@id/birthday"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contribution" />

            <include
                android:id="@+id/birthday"
                layout="@layout/profile_information_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:content="@{@string/test}"
                app:icon="@{@drawable/edit_profile}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/my_information"
                app:title="@{@string/birthday}" />

            <include
                android:id="@+id/phone"
                layout="@layout/profile_information_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:content="@{@string/test}"
                app:icon="@{@drawable/phone}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthday"
                app:title="@{@string/phone}" />

            <include
                android:id="@+id/email"
                layout="@layout/profile_information_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:content="@{@string/test}"
                app:icon="@{@drawable/email}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone"
                app:title="@{@string/email}" />

            <include
                android:id="@+id/city"
                layout="@layout/profile_information_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:content="@{@string/test}"
                app:icon="@{@drawable/city}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:title="@{@string/city}" />

            <TextView
                android:id="@+id/within"
                style="@style/profile_subtitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/within"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city" />

            <TextView
                android:id="@+id/progressbar_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:text="5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/within" />

            <SeekBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:progress="20"
                android:progressDrawable="@drawable/progress_bar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progressbar_value" />

            <TextView
                android:id="@+id/bar_indicator"
                style="@style/h4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/min_progressbar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progressBar" />


            <TextView
                style="@style/h4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingRight="10dp"
                android:text="@string/max_progressbar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progressBar" />

            <TextView
                android:id="@+id/indication"
                style="@style/profile_subtitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="5dp"
                android:text="@string/indications"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bar_indicator" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>